@@ -54,7 +54,7 @@ static void sp_select_context_set(SPEventContext *ec, gchar const *key, gchar co
 static gint sp_select_context_root_handler(SPEventContext *event_context, GdkEvent *event);
 static gint sp_select_context_item_handler(SPEventContext *event_context, SPItem *item, GdkEvent *event);
 
-static void sp_selection_moveto(SPSelTrans *seltrans, Inkscape::MessageContext &message_context, NR::Point const &xy, guint state);
+static void sp_selection_moveto(SPSelTrans *seltrans, NR::Point const &xy, guint state);
 
 static SPEventContextClass *parent_class;
 
@@ -132,7 +132,6 @@ sp_select_context_init(SPSelectContext *sc)
     sc->button_press_shift = FALSE;
     sc->_seltrans = NULL;
     sc->_describer = NULL;
-    sc->_message_context = NULL;
 }
 
 static void
@@ -149,8 +148,6 @@ sp_select_context_dispose(GObject *object)
     sc->_seltrans = NULL;
     delete sc->_describer;
     sc->_describer = NULL;
-    delete sc->_message_context;
-    sc->_message_context = NULL;
 
     G_OBJECT_CLASS(parent_class)->dispose(object);
 }
@@ -167,7 +164,6 @@ sp_select_context_setup(SPEventContext *ec)
     SPDesktop *desktop = ec->desktop;
 
     select_context->_describer = new Inkscape::SelectionDescriber(desktop->selection, desktop->messageStack());
-    select_context->_message_context = new Inkscape::MessageContext(desktop->messageStack());
 
     select_context->_seltrans = new SPSelTrans(desktop);
 
@@ -271,7 +267,7 @@ sp_select_context_item_handler(SPEventContext *event_context, SPItem *item, GdkE
                         sp_sel_trans_grab(seltrans, p, -1, -1, FALSE);
                         sc->moved = TRUE;
                     }
-                    sp_selection_moveto(seltrans, *sc->_message_context, p, event->button.state);
+                    sp_selection_moveto(seltrans, p, event->button.state);
                     if (sp_desktop_scroll_to_point(desktop, &p)) {
                         // unfortunately in complex drawings, gobbling results in losing grab of the object, for some mysterious reason
                         ; //gobble_motion_events (GDK_BUTTON1_MASK);
@@ -282,7 +278,7 @@ sp_select_context_item_handler(SPEventContext *event_context, SPItem *item, GdkE
         case GDK_BUTTON_RELEASE:
             xp = yp = 0;
             if (event->button.button == 1) {
-                sc->_message_context->clear();
+                seltrans->messageContext().clear();
                 if (sc->moved) {
                     // item has been moved
                     sp_sel_trans_ungrab(seltrans);
@@ -441,7 +437,7 @@ sp_select_context_root_handler(SPEventContext *event_context, GdkEvent *event)
                             sp_sel_trans_grab(seltrans, p, -1, -1, FALSE);
                             sc->moved = TRUE;
                         }
-                        sp_selection_moveto(seltrans, *sc->_message_context, p, event->button.state);
+                        sp_selection_moveto(seltrans, p, event->button.state);
                         if (sp_desktop_scroll_to_point(desktop, &p))
                             // unfortunately in complex drawings, gobbling results in losing grab of the object, for some mysterious reason
                             ; //gobble_motion_events(GDK_BUTTON1_MASK);
@@ -759,7 +755,7 @@ sp_select_context_root_handler(SPEventContext *event_context, GdkEvent *event)
     return ret;
 }
 
-static void sp_selection_moveto(SPSelTrans *seltrans, Inkscape::MessageContext &message_context, NR::Point const &xy, guint state)
+static void sp_selection_moveto(SPSelTrans *seltrans, NR::Point const &xy, guint state)
 {
     using NR::X;
     using NR::Y;
@@ -805,7 +801,7 @@ static void sp_selection_moveto(SPSelTrans *seltrans, Inkscape::MessageContext &
     // status text
     GString *xs = SP_PT_TO_METRIC_STRING(dxy[X], SP_DEFAULT_METRIC);
     GString *ys = SP_PT_TO_METRIC_STRING(dxy[Y], SP_DEFAULT_METRIC);
-    message_context.setF(Inkscape::NORMAL_MESSAGE, _("Move by %s, %s"), xs->str, ys->str);
+    seltrans->messageContext().setF(Inkscape::NORMAL_MESSAGE, _("Move by %s, %s"), xs->str, ys->str);
     g_string_free(xs, TRUE);
     g_string_free(ys, TRUE);
 }
